Refactor paths and paths-ignore
Webpack doesn't need to build a distribution if the source files don't
change.

--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -3,11 +3,9 @@ name: Build distribution with Webpack
 on:
   push:
     branches: [ "main" ]
-    # Ignore changes in folders that are affected by the auto commit. (Node.js project)
-    paths-ignore:
-      - 'dist/**'
-  # pull_request:
-  #  branches: [ "main" ]
+    paths:
+      - 'src/**'
+      - 'webpack.config.js'
 
 jobs:
   build:
