Refactor configuration files

--- a/.markdownlint.jsonc
+++ b/.markdownlint.jsonc
@@ -1,22 +1,18 @@
 {
-  "$schema": "https://raw.githubusercontent.com/DavidAnson/markdownlint/main/schema.json",
+  "$schema": "https://raw.githubusercontent.com/DavidAnson/markdownlint/main/schema/markdownlint-config-schema-strict.json",
   "default": true,
   "MD013": {
     "line_length": 120,
     "code_block_line_length": 120,
     "heading_line_length": 80,
-    "tables": false
+    "tables": false,
   },
   "MD024": {
-    "siblings_only": true
+    "siblings_only": true,
   },
   "MD033": {
-    "allowed_elements": [
-      "br",
-      "summary",
-      "details"
-    ]
+    "allowed_elements": ["br", "summary", "details"],
   },
   "MD040": false,
-  "MD046": false
+  "MD046": false,
 }
