Reformat code and docs for consistency
Apply a series of non-functional formatting and minor cleanup updates to
improve readability and consistency across the codebase and
documentation.

Normalize JSON/TS/MD formatting, fix a documentation typo and
capitalization, and reorganize view-related methods for clearer
structure and maintainability.
These changes reduce lint noise and make the code easier to navigate and
review.

--- a/.markdownlint.jsonc
+++ b/.markdownlint.jsonc
@@ -5,14 +5,18 @@
     "line_length": 120,
     "code_block_line_length": 120,
     "heading_line_length": 80,
-    "tables": false,
+    "tables": false
   },
   "MD024": {
-    "siblings_only": true,
+    "siblings_only": true
   },
   "MD033": {
-    "allowed_elements": ["br", "summary", "details"],
+    "allowed_elements": [
+      "br",
+      "summary",
+      "details"
+    ]
   },
   "MD040": false,
-  "MD046": false,
+  "MD046": false
 }
