--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "include": ["src/**/*", "webpack.config.ts", "webpack.dev.config.ts"],
+  "include": ["src/**/*", "webpack.config.ts", "webpack.dev.config.ts", "declarations.d.ts"],
   "compilerOptions": {
     // 1. Language and Environment
     "target": "ES2020",
