--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "home-assistant-js-websocket": "^9.5.0",
     "husky": "^9.1.7",
     "is-ci": "^4.1.0",
+    "lit": "^3.2.1",
     "markdownlint-cli2": "^0.18.1",
     "prettier": "^3.6.2",
     "semver": "^7.7.3",
